[gd_scene load_steps=9 format=2]

[ext_resource path="res://Scripts/Spaceship.gd" type="Script" id=1]
[ext_resource path="res://Scenes/Proiettile.tscn" type="PackedScene" id=2]
[ext_resource path="res://Sprites/Spaceship/MainBody/prisma_giallo.png" type="Texture" id=3]
[ext_resource path="res://Sprites/Spaceship/Heal/heal0.png" type="Texture" id=4]
[ext_resource path="res://Sprites/Spaceship/Heal/heal1.png" type="Texture" id=5]
[ext_resource path="res://Sound/Player/shoot_spaceship.ogg" type="AudioStream" id=8]

[sub_resource type="SpriteFrames" id=1]
animations = [ {
"frames": [ ExtResource( 4 ), ExtResource( 5 ) ],
"loop": false,
"name": "Healing",
"speed": 5.0
} ]

[sub_resource type="ConvexPolygonShape2D" id=2]
points = PoolVector2Array( 0, -25, 35, 20, -35, 20 )

[node name="Spaceship" type="KinematicBody2D"]
z_index = 1
collision_mask = 30
script = ExtResource( 1 )
bullet = ExtResource( 2 )

[node name="Healing" type="AnimatedSprite" parent="."]
visible = false
z_index = 17
frames = SubResource( 1 )
animation = "Healing"

[node name="Sprite" type="Sprite" parent="."]
position = Vector2( 0, -10 )
z_index = 16
texture = ExtResource( 3 )

[node name="SpriteAnimationTimers" type="Node" parent="Sprite"]

[node name="HitTimer" type="Timer" parent="Sprite/SpriteAnimationTimers"]
wait_time = 0.65
one_shot = true

[node name="Barrell" type="Position2D" parent="."]
position = Vector2( 0, -25 )

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
position = Vector2( 0, -2 )
shape = SubResource( 2 )

[node name="ShootingTimer" type="Timer" parent="."]
wait_time = 0.375
one_shot = true

[node name="ShootingPlayer" type="AudioStreamPlayer2D" parent="."]
stream = ExtResource( 8 )

[node name="StatePlayer" type="AudioStreamPlayer2D" parent="."]
[connection signal="animation_finished" from="Healing" to="." method="_on_Healing_animation_finished"]
